--- a/assets/css/genoapay.css
+++ b/assets/css/genoapay.css
@@ -3,3 +3,65 @@
 	margin-top: 5px;
     margin-right: 5px;
 }
+
+.payment_method_genoapay img {
+	margin-top: 5px;
+}
+
+.genoapay_payment_overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 99999;
+    padding: 5%;
+    color: #000;
+    background-color: rgba(0,0,0,0.87);
+    text-align: center;
+    line-height: 16px;
+    font-size: 20px;    
+}
+
+.genoapay_payment_popup {
+    text-align: initial;
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 840px;
+    max-height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    color: #888;
+    background-color: #fff;
+    z-index: 2;
+    box-sizing: border-box;
+    box-shadow: 0 0 50px 0 rgba(0,0,0,0.6);
+    display: inline-block;
+    vertical-align: middle;
+    padding: 30px;
+}
+
+.genoapay_payment_popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+
+.embed-container {
+    position: relative;
+    padding-bottom: 50.25%;
+    height: 0;
+    overflow: hidden;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
+.embed-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
